syntax = "proto3";

package productlist.v1;

option csharp_namespace = "ProductList.V1";

service ProductRPCService{
	rpc GetAllProducts(ProductListRequest) returns(ProductList);
}

message ProductListRequest{

}

message ProductList {
	repeated Product results = 1;
}

message Product {
	string ID=1;
}